--- a/imagenListas.html
+++ b/imagenListas.html
@@ -15,7 +15,43 @@
     <!--el atributo SRC indica el origen de la imagen. y utiliza, como origen, la ruta desde donde esta el archivo html-->
     <!--el atributo alt es obligatorio y sirve para que los buscadores indexen las imagenes y los lectores de pantalla puedan dar informacin sobr-->
     <br></br>
-    <img src="https://images3.memedroid.com/images/UPLOADED801/6036f3113b394.jpeg" alt=" lol">
+    <img src="https://www.clarin.com/img/2019/02/25/UB399FzNI_1256x620__1.jpg" alt=" lol">
+
+    <!--en este caso se dice que la ruta es absoluta-->
+    <h3> numeros</h3>
+    <ul> <!-- la etiqueta <ul> define el inicio de una lista NO ordenada-->
+        <li>cosa</li>
+        <li>algo</li>
+        <li>nada</li>
+    </ul>
+
+    <ol>
+        <li>primero</li>
+        <li>segundo</li>
+        <li>tercero</li>
+        <li>cuarto</li>
+    </ol>
     
+    <!--vinculos-->
+    <p>los Vinculos o links son accesos a otras paginas o recursos en la web.<br>
+        tienen un atributo propio que se llama que se llama href, que define la ubicacion donde se dirije el vinculo <br>
+        la etiqueta <code> &#69;a&#62; </code> tiene apertura y cierre. el contenido es lo que se ve en la pagina
+    </p>
+
+    <a href="https://www.youtube.com/watch?v=_zltf454tXk">Trailer Gremlins</a> <!-- los vinculos o links se definen usando la etiqueta <a> --> 
+
+    <p>el atributo href puede adoptar tres formas distintas:</p>
+
+    <ul>
+        <li><b>Vinculos relativos</b>: como las imagenes, tienen una ruta usando como referencia el lugar donde se encuentra el documento .html</li>
+        <li><b>Vinculo Absoluto</b>: esto es lo mismo que con laas imagenes. podemos usar una url completa. siempre teniendo en cuenta no usar un link de busqueda sino la url concreta del recurso a vincuñlar</li>
+        <li><b>Vinculo Ancla</b>: los vinculooos ancla se usan para referenciar a las distintas partes del mismo documento. para utilizarlo se deben usar el atributo global id que debe ser unico en el documento</li>
+    </ul>
+
+    <p>por otro lado los vinculos tienen otro atributo llamado target</p>
+    <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+
+    <p>el atributo target junto con rel definen como se va comportar el vinculo, en este caso usando el valor _blank nos abre una nueva pestaña y sin referencias a la pagina actual</p>
+
 </body>
 </html>
