--- a/random2.html
+++ b/random2.html
@@ -51,8 +51,22 @@
                 <br>
                 <label for="POST-mail">ingrese su contraseña</label>
                 <input type="email">
-                <
+                <br>
                 <input type="submit" value="enviar">
+
+                ----
+                <!-- formulario con conjunto de campos, leyenda y etiqueta-->
+                <fieldset>
+                    <legend>con que sexo te percibis</legend>
+                    <input type="radio" name="sexo" value="masculino" id="mas">
+                    <label for="radio">masculino</label>
+                    <br>
+                    <input type="radio" name="sexo" value="femenino" id="mas">
+                    <label for="radio">femenino</label>
+                    <br>
+                    <input>
+                    <label for="radio" name="sexo" value="no binario">no binario</label>
+                </fieldset>
             
             </form>
         </table>
