--- a/tp1 curriculum.html
+++ b/tp1 curriculum.html
@@ -135,6 +135,8 @@
     <li>section, header, main, article, footer</li>
 
 
-    lista ordenada <ol></ol>-->   
+    lista ordenada <ol></ol>
+
+agregar formulario y tabla-->   
 
     
