--- a/index.html
+++ b/index.html
@@ -3,37 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="logo">
-        <span>logo</span>
+    <header>
+        <div class ="header-container"> 
+        <h1> This is the title</h1>
+        <nav>
+            <ul>
+                <li><a>Home</a></li>
+                <li><a>Page1</a></li>
+                <li><a>Page2</a></li>
+            </ul>
+        </nav>
+        </div>
     </header>
-    <nav class="navprincipal">
-        <span>navprincipal</span>
-    </nav>
-    <header class="cabecera">
-        <span>cabecera</span>
-    </header>
-<main class="principal">
-    <section class="section1">
-        <span>section1</span>
-        <article class="articulo1">
-            <span>articulo1</span>
+    <main>
+        <section class="section1">
+        <article>
+            <p>aca tenemos el tema de la seccion 1, </p>
         </article>
-        <article class="articulo2"> 
-            <span>articulo2</span> 
+        </section>
+        <section class="section2">
+        <article>
+            <p>aca tenemos el tema de la seccion 2,</p>
         </article>
-        <article class="articulo1">
-            <span>articulo1</span>
-        </article>
-    </section>
- </main>
-<aside>
-<footer class="piedepagina">
-    <span>piedepagina</span>
-</footer>
-</aside>
+        </section>
+        <aside>
+            <img src="" alt="">
+        </aside>
+        <section>
+            <article>
+                <p>text article</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <a href="#">About Us</a>
+        <a href="#">Contacto</a>
+    </footer>
 </body>
 </html>
